--- a/.gitignore
+++ b/.gitignore
@@ -49,7 +49,7 @@ jspm_packages/
 data/user.js
 # Snowpack dependency directory (https://snowpack.dev/)
 web_modules/
-
+user.js
 # TypeScript cache
 *.tsbuildinfo
 
