--- a/.gitignore
+++ b/.gitignore
@@ -47,6 +47,7 @@ build/Release
 node_modules/
 jspm_packages/
 data/user.js
+execute/
 # Snowpack dependency directory (https://snowpack.dev/)
 web_modules/
 user.js
