--- a/.gitignore
+++ b/.gitignore
@@ -47,7 +47,7 @@ build/Release
 node_modules/
 jspm_packages/
 data/user.js
-execute/
+# execute/
 # Snowpack dependency directory (https://snowpack.dev/)
 web_modules/
 user.js
